tests/unit/default/syntax-error/011-create-t.e.t
---- IN ----
+%
---- OUT ----
---- ERR ----
syntax: expected <name> after `+%` instead of EOL at position 2 - at line 1
---- EXIT ----
1
